Minor changes made

--- a/app/src/main/res/layout/gameplay.xml
+++ b/app/src/main/res/layout/gameplay.xml
@@ -8,7 +8,7 @@
 
     <EditText
         android:layout_width="160dp"
-        android:layout_height="45dp"
+        android:layout_height="40dp"
         android:id="@+id/editText"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -19,12 +19,11 @@
         android:capitalize="words"
         android:background="#fcfffd"
         android:textAlignment="center"
-        android:singleLine="false"
-        android:textColor="#ff211c" />
+        android:singleLine="false" />
 
     <Button
         android:layout_width="100dp"
-        android:layout_height="45dp"
+        android:layout_height="40dp"
         android:text="Enter"
         android:id="@+id/enterWord"
         android:onClick="verifyWord"
@@ -42,116 +41,72 @@
         android:id="@+id/gameLayout"
         android:visibility="invisible">
 
+        <TableLayout
+            android:layout_width="fill_parent"
+            android:layout_height="47dp"
+            android:stretchColumns="0,1,2,3,4,5,6"
+            android:id="@+id/tableLayout">
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" >
+
+                <TextView
+                    android:layout_width="25dp"
+                    android:layout_height="35dp"
+                    android:text="No"
+                    android:id="@+id/textView"
+                    android:textStyle="bold"
+                    android:textSize="30dp"
+                    android:layout_column="0"
+                    android:gravity="center_horizontal" />
+
+                <TextView
+                    android:layout_width="25dp"
+                    android:layout_height="35dp"
+                    android:text="Word"
+                    android:id="@+id/textView2"
+                    android:layout_column="1"
+                    android:textStyle="bold"
+                    android:textSize="30dp"
+                    android:gravity="center_horizontal" />
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="35dp"
+                    android:id="@+id/imageView"
+                    android:layout_column="3"
+                    android:src="@drawable/cow3" />
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="35dp"
+                    android:id="@+id/imageView2"
+                    android:layout_column="4"
+                    android:src="@drawable/cow2" />
+            </TableRow>
+        </TableLayout>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/scrollView" >
+            android:id="@+id/scrollView"
+            android:fillViewport="false">
 
             <TableLayout
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
                 android:stretchColumns="0,1,2,3,4,5,6"
-                android:id="@+id/tableLayout">
+                android:id="@+id/tableLayout2"
+                android:minHeight="368dp"
+                android:measureWithLargestChild="true"
+                android:longClickable="false">
 
                 <TableRow
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                    <TextView
-                        android:layout_width="25dp"
-                        android:layout_height="35dp"
-                        android:text="No."
-                        android:id="@+id/textView"
-                        android:textStyle="bold"
-                        android:textSize="30dp"
-                        android:layout_column="0"
-                        android:gravity="center_horizontal" />
-
-                    <TextView
-                        android:layout_width="25dp"
-                        android:layout_height="35dp"
-                        android:text="Word"
-                        android:id="@+id/textView2"
-                        android:layout_column="1"
-                        android:textStyle="bold"
-                        android:textSize="30dp"
-                        android:gravity="center_horizontal" />
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="35dp"
-                        android:id="@+id/imageView"
-                        android:layout_column="3"
-                        android:src="@drawable/cow3" />
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="35dp"
-                        android:id="@+id/imageView2"
-                        android:layout_column="4"
-                        android:src="@drawable/cow2" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
+                    android:layout_height="fill_parent" >
 
                 </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                </TableRow>
-
             </TableLayout>
         </ScrollView>
 
