--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -23,32 +23,34 @@
         android:layout_width="@android:dimen/thumbnail_width"
         android:layout_height="@android:dimen/thumbnail_height"
         android:id="@+id/imageView"
-        android:layout_centerVertical="true"
+        android:src="@drawable/cow3"
+        android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@drawable/cow3" />
+        android:layout_marginTop="39dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bulls and Cows"
         android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="52dp"
-        android:textSize="50dp"
+        android:textSize="45dp"
         android:textStyle="bold"
-        android:textIsSelectable="true" />
+        android:textIsSelectable="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/imageView2"
+        android:layout_alignEnd="@+id/imageView2"
+        android:layout_marginTop="41dp" />
 
     <Button
         android:layout_width="@android:dimen/thumbnail_width"
         android:layout_height="wrap_content"
         android:text="Start"
         android:id="@+id/button"
-        android:layout_marginTop="62dp"
-        android:textSize="30dp"
+        android:textSize="50dp"
         android:onClick="gotToGamePage"
-        android:layout_below="@+id/imageView2"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="43dp" />
 
 </RelativeLayout>
