--- a/app/src/main/res/layout/gameplay.xml
+++ b/app/src/main/res/layout/gameplay.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#70ff32">
+    android:background="@drawable/meadow">
 
     <EditText
         android:layout_width="160dp"
@@ -13,12 +13,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="false"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="25dp"
         android:maxLength="4"
         android:capitalize="words"
         android:background="#fcfffd"
-        android:textAlignment="center"
+        android:textAlignment="gravity"
         android:singleLine="false" />
 
     <Button
@@ -59,7 +59,7 @@
                     android:textStyle="bold"
                     android:textSize="30dp"
                     android:layout_column="0"
-                    android:gravity="center_horizontal" />
+                    android:gravity="center" />
 
                 <TextView
                     android:layout_width="25dp"
