--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.surya.bullsandcows.app.BullsAndCowsActivity"
     android:focusable="true"
-    android:background="#70ff32"
+    android:background="@drawable/meadow"
     android:focusableInTouchMode="true">
 
     <ImageView
@@ -38,19 +38,28 @@
         android:textStyle="bold"
         android:textIsSelectable="true"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/imageView2"
-        android:layout_alignEnd="@+id/imageView2"
-        android:layout_marginTop="41dp" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="@android:dimen/thumbnail_width"
         android:layout_height="wrap_content"
-        android:text="Start"
+        android:text="Play"
         android:id="@+id/button"
         android:textSize="50dp"
         android:onClick="gotToGamePage"
+        android:layout_marginBottom="55dp"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="How To Play"
+        android:id="@+id/button2"
+        android:layout_above="@+id/button"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp" />
+        android:layout_marginBottom="25dp"
+        android:textSize="35dp"
+        android:onClick="gotToInstructionPage"/>
 
 </RelativeLayout>
